# ftp-program-with-data-compression

./: .gitignore  CMakeLists.txt  README.md
apps/: CMakeLists.txt  Client.cpp  Server.cpp
include/Client/: Services.hpp
include/Client/Views/: Help.hpp  Home.hpp  Include.hpp  Link.hpp  Send.hpp  Views.hpp
include/Huffman/: Huffman.hpp
include/Server/: Services.hpp
src/: CMakeLists.txt
src/Client/: CMakeLists.txt  Services.cpp
src/Client/Views/: CMakeLists.txt  Help.cpp  HelpMsg.txt  Home.cpp  Link.cpp  Send.cpp
src/Huffman/: CMakeLists.txt  Huffman.cpp
src/Server/: CMakeLists.txt  Services.cpp
